# abaxx-transcribe

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
tests/: test_cli.py  test_diarizer.py  test_formatter.py  test_merger.py  test_transcriber.py
transcribe_and_diarize/: __init__.py  __main__.py  config.py  diarizer.py  exceptions.py  formatter.py  logger.py  merger.py  transcriber.py
