[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abaxx-transcribe"
version = "0.1.0"
description = "Local, privacy-first meeting audio transcription with speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Abaxx Technologies", email = "dev@abaxx.tech"}]
keywords = ["transcription", "diarization", "whisper", "pyannote", "meeting", "audio"]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/abaxxtech/abaxx-transcribe"

[project.scripts]
"transcribe-and-diarize" = "transcribe_and_diarize.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: slow tests", "integration: integration tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
